fix: Add playmode taskgroups endpoint
