# src/internal/handlers/taskgroups/task_groups.go
@@ -130,12 +130,11 @@ func (h *Handler) HandleCreate(c *gin.Context) error {
 type GetResponse struct {
 	Quest      *storage.Quest      `json:"quest"`
 	TaskGroups []storage.TaskGroup `json:"task_groups"`
-	Team       *storage.Team       `json:"team"`
 }
 
 // HandleGet handles GET quest/:id/task-groups request
 //
-// @Summary	Get task groups with tasks
+// @Summary	Get task groups with tasks for quest creator
 // @Tags	TaskGroups
 // @Param	quest_id	path		string		true	"Quest ID"
 // @Success	200			{object}	taskgroups.GetResponse
@@ -165,10 +164,10 @@ func (h *Handler) HandleGet(c *gin.Context) error {
 		}
 		return xerrors.Errorf("get quest: %w", err)
 	}
-	quests.SetStatus(quest)
-	if quest.Status != storage.StatusRunning {
-		return httperrors.New(http.StatusNotAcceptable, "cannot get tasks before quest start")
+	if quest.Creator.ID != uauth.ID {
+		return httperrors.Errorf(http.StatusForbidden, "only creator can get tasks outside of playmode", questID)
 	}
+	quests.SetStatus(quest)
 	taskGroups, err := s.GetTaskGroups(c, &storage.GetTaskGroupsRequest{QuestID: questID, IncludeTasks: true})
 	if err != nil {
 		if errors.Is(err, storage.ErrNotFound) {
@@ -176,14 +175,7 @@ func (h *Handler) HandleGet(c *gin.Context) error {
 		}
 		return xerrors.Errorf("get taskgroups: %w", err)
 	}
-	userTeam, err := s.GetTeam(c, &storage.GetTeamRequest{UserRegistration: &storage.UserRegistration{UserID: uauth.ID, QuestID: questID}})
-	if err != nil {
-		if errors.Is(err, storage.ErrNotFound) {
-			return httperrors.Errorf(http.StatusNotAcceptable, "user %q has no team", uauth.ID)
-		}
-		return xerrors.Errorf("get team: %w", err)
-	}
-	resp := GetResponse{Quest: quest, TaskGroups: taskGroups, Team: userTeam}
+	resp := GetResponse{Quest: quest, TaskGroups: taskGroups}
 
 	c.JSON(http.StatusOK, resp)
 	return nil
